--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -226,6 +226,9 @@ footer{
   transition: opacity .4s;
 }
 
+.file_max-width{
+  max-width:230px;
+}
 .info{
   background-color: #95e1d3;
   display: flex;
