field for searching the desired product for the admin and user

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -229,6 +229,13 @@ footer{
 .file_max-width{
   max-width:230px;
 }
+
+.serch_product{
+  max-width:230px;
+  position: relative;
+  left: 50%;
+  margin-left: -110px;
+}
 .info{
   background-color: #95e1d3;
   display: flex;
