added categories for products and associations, changed the header for the admin, added styles for adding categories, added a page with products divided into categories, changed tests for products, added tests for categories

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,6 +99,18 @@ footer{
   height: 190px;
 }
 
+.marl_cat{
+  margin: 0 700px 0 700px;
+}
+
+.max_w{
+  max-width: 300px;
+}
+
+.del_m{
+  margin-right: -70px;
+}
+
 .banner{
   height: 690px;
   width: 100%;
