--- a/app/views/admin/homepage/index.html.erb
+++ b/app/views/admin/homepage/index.html.erb
@@ -24,6 +24,7 @@
 <%= link_to 'Products', admin_products_path, class: "btn btn-primary" %>
 <%= link_to 'Checkouts', checkouts_path, class: "btn btn-primary" %>
 <%= link_to 'Promocodes', admin_promocodes_path, class: "btn btn-primary" %>
+<%= link_to 'Categories', admin_categories_path, class: "btn btn-primary" %>
 
 
 
