--- a/app/views/admin/promocodes/_form.html.erb
+++ b/app/views/admin/promocodes/_form.html.erb
@@ -28,6 +28,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.button "Сomplete", type: "submit", :class=> "btn btn-primary mt-3" %>
   </div>
 <% end %>
