--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -43,6 +43,10 @@
     </small>
   </div>
 
+  <div class="field mb-3">
+    <%= form.label :category %>
+    <%= form.select :category_id, options_for_select(@categories.collect {|cat| [cat.name, cat.id]}), class: "form-control max" %>
+  </div>
 
   <div class="custom-file file_max-width">
     <%= form.label :image, class: "custom-file-label" %>
