--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,10 +1,15 @@
 <h1 class="text-center">Products</h1>
 
-<%= search_form_for [:admin, @q] do |f| %>
-  <%= f.search_field :product_name_cont, class: 'form-control file_max-width mb-2'%>
-  <%= f.submit class: 'btn btn-primary' %> |
-  <%= link_to " Clear", request.path, class: "btn btn-outline-danger" %>
-<% end %>
+
+    
+
+<div class="serch_product">
+  <%= search_form_for [:admin, @q] do |f| %>
+    <%= f.search_field :product_name_cont, class: 'form-control file_max-width mb-2'%>
+    <%= f.submit class: 'btn btn-primary' %> |
+    <%= link_to " Clear", request.path, class: "btn btn-outline-danger" %>
+  <% end %>
+</div>
 
 <%= form_tag discontinue_admin_products_path, method: :delete do %>
   <table class="table mt-2">
@@ -16,6 +21,7 @@
         <th>Vendor code</th>
         <th>Price</th>
         <th>Description</th>
+        <th>Category</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -40,6 +46,7 @@
           <% else %>
             <td><%= product.description %></td>
           <% end %>
+          <td><%= product.category.name %></td>
 
           <% if current_user.admin? %>
             <td><%= link_to 'Show', admin_product_path(product), class: "btn btn-outline-primary mt-2" %></td>
