--- a/app/views/cards/_cards_item.html.erb
+++ b/app/views/cards/_cards_item.html.erb
@@ -12,10 +12,16 @@
           </div>
           <div class="col-md-7">
             <div class="card-body">
-              <h5 class="card-title"><%= item.product.product_name %></h5>
-              <h5 class="card-text">code: <%= item.product.vendor_code %></h5>
-              <h5 class="card-text">price: <%= item.product.price %>$</h5>
+              <h5 class="card-title "><%= item.product.product_name %></h5>
+              <h5 class="card-text ">Code: <%= item.product.vendor_code %></h5>
+              <h5 class="card-text "><%= item.product.price %>$</h5>
+              <% if item.product.description.empty?%>
+                <h5 class="card-text ">This product has no description</h5>
+              <% else %>
+                <h5 class="card-text "><%= item.product.description %></h5>
+              <% end %>
               <h5 class="card-text"><%= item.product.description %></h5>
+              <h5 class="card-text">Category: <%= item.product.category.name %></h5>
               <h5 class="card-text">Quantity: <%= item.quantity %></h5>
             </div>
           </div>
