--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -27,6 +27,11 @@
               <h5 class="card-text">code: <%= item.product.vendor_code %></h5>
               <h5 class="card-text">price: <%= item.product.price %>$</h5>
               <h5 class="card-text">Quantity: <%= item.quantity %></h5>
+              <% if item.product.description.empty?%>
+                <h5 class="card-text">This product has no description</h5>
+              <% else %>
+                <h5 class="card-text"><%= item.product.description %></h5>
+              <% end %>
               <h5 class="card-text"><%= item.product.description %></h5>
             </div>
           </div>
