--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,33 +1,32 @@
-<p id="notice"><%= notice %></p>
+<% unless user_signed_in? && current_user.admin? %>
+  <h1 class="text-center">Only available for admin</h1>
+<% else %>
+  <p id="notice"><%= notice %></p>
 
-<h1 class="text-center">Categories</h1>
+  <h1 class="text-center">Categories</h1>
 
-<table class="table mt-2">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @categories.each do |category| %>
+  <table class="table mt-2">
+    <thead>
       <tr>
-        <td><%= category.name %></td>
-        <td><%= category.description %></td>
-        <td><%= link_to 'Show', admin_category_path(category), class: "btn btn-outline-primary mt-2" %></td>
-        <td><%= link_to 'Edit', edit_admin_category_path(category), class: "btn btn-outline-primary mt-2" %></td>
-        <td><%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger mt-2" %></td>
+        <th>Name</th>
+        <th>Description</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Category', new_admin_category_path, class: "btn btn-primary" %>
-<%= link_to 'Back', root_path, class: "btn btn-outline-danger"%>
-
-
-
+    <tbody>
+      <% @categories.each do |category| %>
+        <tr>
+          <td><%= category.name %></td>
+          <td><%= category.description %></td>
+          <td><%= link_to 'Show', admin_category_path(category), class: "btn btn-outline-primary mt-2" %></td>
+          <td><%= link_to 'Edit', edit_admin_category_path(category), class: "btn btn-outline-primary mt-2" %></td>
+          <td><%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger mt-2" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <br>
+  <%= link_to 'New Category', new_admin_category_path, class: "btn btn-primary" %>
+  <%= link_to 'Back', root_path, class: "btn btn-outline-danger"%>
+<% end %>
