--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,8 +1,8 @@
+<% unless user_signed_in? && current_user.admin? %>
+  <h1 class="text-center">Only available for admin</h1>
+<% else %>
+
 <h1 class="text-center">Products</h1>
-
-
-    
-
 <div class="serch_product">
   <%= search_form_for [:admin, @q] do |f| %>
     <%= f.search_field :product_name_cont, class: 'form-control file_max-width mb-2'%>
@@ -77,3 +77,4 @@
   <% end %>
 <%= will_paginate @products, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
 <%= link_to 'Back', root_path, class: "btn btn-outline-danger mt-4 mb-3"%>
+<% end %>
