--- a/app/views/admin/promocodes/_form.html.erb
+++ b/app/views/admin/promocodes/_form.html.erb
@@ -15,7 +15,7 @@
     <%= form.label :code %>
     <%= form.text_field :code, class: "form-control max" %>
     <small class="text-muted">
-      Must be 1-4 characters long.
+      Must be 4 characters long.
     </small>
   </div>
 
@@ -23,7 +23,7 @@
     <%= form.label :discount %>
     <%= form.number_field :discount, class: "form-control max" %>
     <small class="text-muted">
-      Must be 1-100 characters long.
+      Must be 1-100%
     </small>
   </div>
 
