--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -46,7 +46,8 @@
   </div>
 
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2016<span class="footer_end_red"> OnlineStore</span>
+    © <%= Time.now.year %><span class="footer_end_red"> OnlineStore</span>
   </div>
+  
 
 </footer>
