--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -1,46 +1,74 @@
-<div class="container">
-  <p id="notice"><%= notice %></p>
-  <div class="row">
-    <div class="col-md-7 pl-4">
-      <%= render 'form', checkout: @checkout %>
-      <% if current_order.total_price ==  0 %>
-        <h1>Total price: <%= current_order.subtotal %>$</h1>
-      <% else %>
-        <h1>Total price: <%= current_order.total_price %>$</h1>
+<% if user_signed_in? && current_user.admin? %>
+  <h1 class="text-center">This is users page</h1>
+<% else %>
+  <div class="container">
+    <p id="notice"><%= notice %></p>
+    <div class="row">
+      <div class="col-md-7 pl-4">
+        <%= render 'form', checkout: @checkout %>
+        <% if current_order.total_price ==  0 %>
+          <h1>Total price: <%= current_order.subtotal %>$</h1>
+        <% else %>
+          <h1>Total price: <%= current_order.total_price %>$</h1>
+        <% end %>
+      </div>
+      <div class="col-md-5">
+        <h4>Card info:</h4>
+        <% @order_items.each do |item| %>
+        <div class="card" style="max-width: 640px;">
+          <div class="row">
+            <div class="col-md-5">
+              <% if item.product.image.attached? == false %>
+                <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
+              <% else %>
+                <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
+              <% end %>
+            </div>
+            <div class="col-md-7">
+              <div class="card-body">
+                <h5 class="card-title"><%= item.product.product_name %></h5>
+                <h5 class="card-text">code: <%= item.product.vendor_code %></h5>
+                <h5 class="card-text">price: <%= item.product.price %>$</h5>
+                <h5 class="card-text">Quantity: <%= item.quantity %></h5>
+                <% if item.product.description.empty?%>
+                  <h5 class="card-text">This product has no description</h5>
+                <% else %>
+                  <h5 class="card-text"><%= item.product.description %></h5>
+                <% end %>
+                <h5 class="card-text"><%= item.product.description %></h5>
+              </div>
+            </div>
+            <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
+          </div>
+        </div>
       <% end %>
     </div>
-    <div class="col-md-5">
-      <h4>Card info:</h4>
-      <% @order_items.each do |item| %>
-      <div class="card" style="max-width: 640px;">
-        <div class="row">
-          <div class="col-md-5">
-            <% if item.product.image.attached? == false %>
-              <%= image_tag("plh.png", class: "img-fluid rounded-start dop") %>
-            <% else %>
-              <%= image_tag(item.product.image, class: "img-fluid rounded-start dop") %>
-            <% end %>
-          </div>
-          <div class="col-md-7">
-            <div class="card-body">
-              <h5 class="card-title"><%= item.product.product_name %></h5>
-              <h5 class="card-text">code: <%= item.product.vendor_code %></h5>
-              <h5 class="card-text">price: <%= item.product.price %>$</h5>
-              <h5 class="card-text">Quantity: <%= item.quantity %></h5>
-              <% if item.product.description.empty?%>
-                <h5 class="card-text">This product has no description</h5>
-              <% else %>
-                <h5 class="card-text"><%= item.product.description %></h5>
-              <% end %>
-              <h5 class="card-text"><%= item.product.description %></h5>
-            </div>
-          </div>
-          <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
-        </div>
-      </div>
-    <% end %>
   </div>
-</div>
+<% end %>
+
+<script> 
+
+function delivery_choice() {
+    let delivery = document.getElementById('delivery');
+    let radio = document.getElementById('radio');
+    let address = document.getElementById('address');
+    address.style.display = delivery.checked ? 'block' : 'none';
+    for (let i = 0; i < radio.children.length; i++) {
+      radio.children[i].onchange = () => {
+        address.style.display = delivery.checked ? 'block' : 'none';
+      };
+    }
+
+  }
+  if( document.readyState !== 'loading' ) {
+    delivery_choice();
+  } else {
+    document.addEventListener('DOMContentLoaded', function () {
+      delivery_choice();
+    });
+  }
+
+</script>
 
 
 
