--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -45,7 +45,7 @@
 
   <div class="field mb-3">
     <%= form.label :category %>
-    <%= form.select :category_id, options_for_select(@categories.collect {|cat| [cat.name, cat.id]}), class: "form-control max" %>
+    <%= form.select :category_id, options_for_select(@categories.collect {|cat| [cat.name, cat.id]}.insert(0, "Select a category")), class: "form-control max" %>
   </div>
 
   <div class="custom-file file_max-width">
