--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -68,9 +68,9 @@
 <% end %>
   <%= form_tag import_admin_products_path, multipart: true do %>
   <div class="custom-file file_max-width mt-2">
-    <%= file_field_tag :file, class: "custom-file-input" %>
-    <label class="custom-file-label" for="customFileLang">Выберите файл</label>
-    <%= submit_tag "Import", class: "btn btn-primary mb-3 mt-2" %>
+    <%= file_field_tag :file, class: "custom-file-input", id: "file" %>
+    <label class="custom-file-label" for="customFileLang">Choose a file</label>
+    <%= submit_tag "Import", class: "btn btn-primary mb-3 mt-2", id: "import" %>
     <small class="text-muted mb-2">
       Must be a CSV
     </small>
@@ -89,4 +89,7 @@
     $('#submit').attr('disabled',true);}
     }
   });
+
+
+
 </script>
