--- a/app/views/cards/_cards_item.html.erb
+++ b/app/views/cards/_cards_item.html.erb
@@ -33,7 +33,7 @@
                 <%= f.hidden_field :product_id, :value => item.product.id, class: "form-control" %>
                 <%= f.number_field :quantity, :value => item.quantity.to_i, class: "form-control ml-3"%>
               </div>
-              <%= f.submit "Update Card", class: "btn btn-primary mb-2 "%>
+              <%= f.submit "Update Position", class: "btn btn-primary mb-2 "%>
               <%= link_to "Remove Items", order_item_path(item), method: :delete, remote: true, data: { confirm: 'Are you sure?' }, class: "btn btn-danger mb-2 ml-2" %>
             <% end %>
             <h2 class="ml-4">Subtotal: <%= item.total %>$</h2>
