--- a/app/views/checkouts/_form.html.erb
+++ b/app/views/checkouts/_form.html.erb
@@ -45,14 +45,17 @@
 
       <% if current_order.total_price != 0 %>
         <div class="field">
-          <%= form.text_field :total_price, value: (current_order.total_price), type: :hidden %>
+          <%= form.text_field :total_price, value: (current_order.total_price.to_f), type: :hidden %>
         </div>
       <% else %>
         <div class="field">
-          <%= form.text_field :total_price, value: (current_order.subtotal), type: :hidden %>
+          <%= form.text_field :total_price, value: (current_order.subtotal.to_f), type: :hidden %>
         </div>
       <% end %> 
 
+      <div class="field mb-3">
+        <%= form.number_field :order_id, id: :orders_id, value: current_order.id, type: :hidden  %>
+      </div>
 
       <div class="field">
         <%= form.number_field :user_id, id: :checkout_user_id, value: current_user.id, type: :hidden %>
