--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -35,7 +35,6 @@
                 <% else %>
                   <h5 class="card-text"><%= item.product.description %></h5>
                 <% end %>
-                <h5 class="card-text"><%= item.product.description %></h5>
               </div>
             </div>
             <h3 class="ml-4">Subtotal: <%= item.total %>$</h3>
@@ -72,21 +71,24 @@
   const name = document.getElementById('name');
   const pick = document.getElementById('pick');
 
-  $('#submit').prop("disabled", false);
-    $( "#delivery" ).on( "click", function(){
-      submit.disabled = true
+  $( "#pick" ).on( "click", function(){
+  submit.disabled = false
+  })
+
+  $( "#delivery" ).on( "click", function(){
+    submit.disabled = true
+    if (aaddress.value.length > 20) {
+      submit.disabled = false
+    }else {
+    $( "#aaddress" ).change(function(){
       if (aaddress.value.length > 20) {
         submit.disabled = false
-      }else {
-      $( "#aaddress" ).change(function(){
-      if (aaddress.value.length > 20) {
-      submit.disabled = false
       } else {
-      submit.disabled = true
+        submit.disabled = true
       }
-      })
+    })
     }
-      })
+  })
 </script>
 
 
