--- a/app/views/shops/categories.html.erb
+++ b/app/views/shops/categories.html.erb
@@ -1,10 +1,15 @@
 <% if user_signed_in? && current_user.admin? %>
   <h1 class="text-center">This is users page</h1>
 <% else %>
-  <% @cat.each do |cat| %>
-    <%= link_to cat_path(cat) do %> 
-        <h2 class="text-center"><%= cat.name %></h2>
+  <div class="serch_product mb-3">
+    <%= search_form_for @q, url: shops_categories_path, html: {method: :get} do |f| %>
+    <%= f.search_field :name_cont, class: 'form-control file_max-width mb-2'%>
+    <%= f.submit class: 'btn btn-primary ml-4' %> |
+    <%= link_to " Clear", request.path, class: "btn btn-outline-danger" %>
     <% end %>
+  </div>
+  <% @cat.each do |cat| %>
+    <h2 class="text-center"><%= cat.name %></h2>
     <h4 class="text-center"><%= cat.description %></h4> 
     <% @product.each do |prod| %>
       <% unless prod.category.name != cat.name %>
